Updates to the icons again for fix how the icons gets build and minor alignemnet fixes

--- a/modules/contact-form/css/editor-ui.css
+++ b/modules/contact-form/css/editor-ui.css
@@ -4,14 +4,18 @@ i.mce-i-grunion {
 
 i.mce-i-grunion:before,
 .jetpack-contact-form-icon:before {
-	width: 20px;
+	width: 24px;
 	vertical-align: top;
 	content: '';
 	display: block;
-	height: 20px;
-	background-size: 18px;
-	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M13 7.5h5v2h-5zm0 7h5v2h-5zM19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zM11 6H6v5h5V6zm-1 4H7V7h3v3zm1 3H6v5h5v-5zm-1 4H7v-3h3v3z"/></svg>');
+	height: 24px;
+	background-size: 24px;
+	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="rbg(50,50,50)" d="M13 7.5h5v2h-5zm0 7h5v2h-5zM19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zM11 6H6v5h5V6zm-1 4H7V7h3v3zm1 3H6v5h5v-5zm-1 4H7v-3h3v3z"/></svg>');
+	margin-top: -4px;
+}
+i.mce-i-grunion:before {
 	margin-top: -1px;
+	margin-left: -2px;
 }
 
 .jetpack-contact-form-icon {
